# Moderation-ai

./: .dockerignore  .env.template  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.healthcheck  GITHUB_INITIALIZATION.md  INDEX.md  LICENSE  PHASE_0_SUMMARY.md  PHASE_3_PROGRESS.md  PHASE_4_PROGRESS.md  PROJECT_STATUS.md  QUICK_START.md  README.md  add_issues_to_project.py  create-issues.sh  create_github_issues.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: documentation.md  implementation.md  platform-integration.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  OPERATIONS.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  PHASE6_COMPLETION.md  PHASE6_PLAN.md  PHASE7_COMPLETION.md  PHASE7_PLAN.md  QUICK_START.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md  implementation-phases.md  llm-context-guide.md  standards-and-metrics.md  testing.md
docs/api-reference/: README.md  authentication.md  common-patterns.md  error-handling.md  rate-limiting.md  webhooks.md
docs/comment-analysis/: README.md  abuse-detection.md  categorization.md  community-metrics.md  content-ideation.md  faq-extraction.md  sentiment-analysis.md  summarization.md
grafana/dashboards/: overview.json  performance.json  security.json
k8s/: deployment.yaml
nginx/: Dockerfile  nginx-ssl.conf  nginx.conf
prometheus/: rules.yml
scripts/: deploy.sh  health_check.py  optimize_performance.sh  rollback.sh  security_audit.sh
src/: __init__.py
src/analysis/: __init__.py  abuse_detector.py  base.py  categorizer.py  community_metrics.py  content_ideation.py  faq_extractor.py  sentiment.py  summarizer.py
src/core/: __init__.py  base.py  config.py  metrics.py  standards.py
src/utils/: __init__.py  auth_manager.py  error_handler.py  rate_limiter.py
tests/: conftest.py  test_documentation.md
tests/fixtures/: __init__.py  api_mocks.py  auth_fixtures.py  data_fixtures.py  platform_fixtures.py
tests/integration/: test_api_clients.py  test_auth_flows.py  test_error_handling.py  test_platform_integration.py  test_rate_limiting.py  test_twitter_reddit_youtube.py  test_webhooks.py
tests/unit/: test_analysis.py  test_core.py  test_utils.py
